did basic logic for battle function

--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,9 @@
 
 
 
-<div id="player-stats">
-  <!-- <div id=player-name></div>
-  <div id="player-profession"></div>
-  <div id="player-strength"></div>
-  <div id="player-intelligence"></div>
-  <div id="player-dexterity"></div> -->
-</div>
 
+<div id="player-stats"></div>
+<button id="attack">attack</button>
 
 
 
