added more logic

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,41 @@
     <label for="name">Name</label>
     <input type="text" name="name" id="name">
     <label for="profession">Profession</label>
-    <input type="radio" id="profession">
+    <select id="profession"> 
+      <option value="rouge">Rouge</option>
+      <option value="ranger">Ranger</option>
+      <option value="knight">Knight</option>
+      <option value="mage">Mage</option>
+
+
+    </select>
     <label for="strength">Strength</label>
-    <input type="number" name="strength" id="strength">
+    <input type="number" name="strength" id="strength" maxlength="1" size="1">
     <label for="intelligence">Intelligence</label>
-    <input type="number" name="intelligence" id="intelligence">
+    <input type="number" name="intelligence" id="intelligence" maxlength="1" size="1">
     <label for="dexterity">Dexterity</label>
-    <input type="number" name="dexterity" id="dexterity">
+    <input type="number" name="dexterity" id="dexterity" maxlength="1" size="1">
+  </div>
+
+  <div>
+    <img id="rouge-img" src="https://cdn2.scratch.mit.edu/get_image/user/35825441_60x60.png">
+    <img id="ranger-img" src="https://i.imgur.com/kJtPrT0.gif">
+    <img id="knight-img" src="https://i.pinimg.com/originals/2c/78/79/2c7879557f1cab6d9c3eef2744b7b124.gif">
+    <img id="mage-img" src="https://cdn.pixilart.com/photos/large/39a2a3f8b412f19.gif">
+  </div>
+
+
+
+
+  <div id="char-display">
+    <p id="name-display"></p>
+    <p id="prof-display"></p>
+    <p id="strength-display"></p>
+    <p id="int-display"></p>
+    <p id="dext-display"></p>
+    <p id="mana-display"></p>
+    <p id="inv-display"></p>
+    <p id="health-display"></p>
   </div>
 
 <button id="create">Create</button>
