got img to display with realtionship to class

--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
 
   <div id="char-creation">
     <label for="name">Name</label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" required>
     <label for="profession">Profession</label>
-    <select id="profession"> 
+    <select id="profession" required> 
       <option value="Rouge">Rouge</option>
       <option value="Ranger">Ranger</option>
       <option value="Knight">Knight</option>
       <option value="Mage">Mage</option>
     </select>
     <label for="strength">Strength</label>
-    <input type="number" name="strength" id="strength" min="1" max="10" >
+    <input type="number" name="strength" id="strength" min="1" max="10" required >
     <label for="intelligence">Intelligence</label>
-    <input type="number" name="intelligence" id="intelligence" min="1" max="10">
+    <input type="number" name="intelligence" id="intelligence" min="1" max="10" required>
     <label for="dexterity">Dexterity</label>
-    <input type="number" name="dexterity" id="dexterity" min="1" max="10"  >
+    <input type="number" name="dexterity" id="dexterity" min="1" max="10" required >
   </div>
 
   <div>
