added potions and boss templates

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,12 @@
             <div id="dext-display"></div>    
             <div id="mana-display"></div>
             <div id="health-display"></div>
-            <div id="inv-display"></div>
+            <div id="pot1-display"></div>
+            <div id="pot2-display"></div>
+          </div>
+          <div class="col-md-2">
+            <button id="small-heal" type="button">Small Potion Heal</button>
+            <button id="big-heal" type="button">Large Potion Heal</button>
           </div>
       </div>
     </div>
