work on attack function

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,6 @@
       <option value="Mage">Mage</option>
     </select>
     <p id="char-check">Use upwards of 15 points!!</p>
-    <p id="check-false">Use only 15 points!</p>
     <label for="strength">Strength</label>
     <input type="number" name="strength" id="strength" min="1" max="5" required >
     <label for="intelligence">Intelligence</label>
@@ -57,6 +56,8 @@
           </div>
       </div>
     </div>
+
+
 <br>
 <button id="create">Create</button>
 
@@ -64,7 +65,8 @@
 
 
 <div id="player-stats"></div>
-
+<div id="enemy-stats"></div>
+<div id="combat-log"></div>
 <button id="attack">attack</button>
 
 
